--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -4,12 +4,11 @@
 	<title>Page1</title>
 </head>
 
-<body bgcolor="white"> <!-- change background colour -->
+<body background-color="white"> <!-- change background colour -->
 
 <a href = "https://www.etsy.com/ie/shop/PaulaLovesVintage?ref=seller-platform-mcnav"> 
 <img src="images/shopbutton2.png" width = "330"></a>
 <!-- create link to external website from image -->
-</>
 <!-- create link to page 2 -->
 <a href="stockviewer.html"><img src="images/stafflogin.png" width = "330">
 </a>
