--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -7,7 +7,7 @@
 <body background-color="white"> <!-- change background colour -->
 
 <a href = "https://www.etsy.com/ie/shop/PaulaLovesVintage?ref=seller-platform-mcnav"> 
-<img src="images/shopbutton2.png" width = "330"></a>
+<img src="templates/shopbutton2.png" width = "330"></a>
 <!-- create link to external website from image -->
 <!-- create link to page 2 -->
 <a href="stockviewer.html"><img src="images/stafflogin.png" width = "330">
