fixed image paths

--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -10,10 +10,10 @@
 <img src="templates/shopbutton2.png" width = "330"></a>
 <!-- create link to external website from image -->
 <!-- create link to page 2 -->
-<a href="stockviewer.html"><img src="images/stafflogin.png" width = "330">
+<a href="stockviewer.html"><img src="templates/stafflogin.png" width = "330">
 </a>
 
-<img src="images/header4.png" alt="Header" width="1332">
+<img src="templates/header4.png" alt="Header" width="1332">
 
 </body>
 </html>
