fixed some html

--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -12,10 +12,10 @@
 <!-- create link to page 2 -->
 <a href="stockviewer.html"><img src="templates/stafflogin.png" width = "330">
 </a>
-<a img src="templates/custlogin.png" width = "330">
-</a>
-<a img src="templates/aboutus.png" width = "330">
-</a>
+<img src="templates/custlogin.png" width = "330">
+
+<img src="templates/aboutus.png" width = "330">
+
 
 <img src="templates/header4.png" alt="Header" width="1332">
 
