--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -10,9 +10,10 @@
 <img src="templates/shopbutton2.png" style="width:24.5%"></a>
 <!-- create link to external website from image -->
 <!-- create link to page 2 -->
-<a href="stockviewer.html"><img src="templates/stafflogin.png" style="width:24.5%">
+<a href="stafflogin.html"><img src="templates/stafflogin.png" style="width:24.5%">
 </a>
-<img src="templates/custlogin.png" style="width:24.5%">
+<a href="stockviewer.html"><img src="templates/custlogin.png" style="width:24.5%">
+</a>
 
 <img src="templates/aboutus.png" style="width:24.5%">
 
