--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -12,7 +12,7 @@
 <!-- create link to page 2 -->
 <a href="stafflogin.html"><img src="templates/stafflogin.png" style="width:24.5%">
 </a>
-<a href="stockviewer.html"><img src="templates/custlogin.png" style="width:24.5%">
+<a href="stockviewer.html"><img src="templates/stock.png" style="width:24.5%">
 </a>
 
 <img src="templates/aboutus.png" style="width:24.5%">
