--- a/project/templates/stafflogin.html
+++ b/project/templates/stafflogin.html
@@ -2,7 +2,7 @@
   <head>
     <title>stafflogin page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
