amended link to login

--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -10,7 +10,7 @@
 <img src="templates/shopbutton2.png" style="width:24.5%"></a>
 <!-- create link to external website from image -->
 <!-- create link to page 2 -->
-<a href="templates/stafflogin.html"><img src="templates/stafflogin.png" style="width:24.5%">
+<a href="/stafflogin"><img src="templates/stafflogin.png" style="width:24.5%">
 </a>
 <a href="stockviewer.html"><img src="templates/stock.png" style="width:24.5%">
 </a>
