--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -16,6 +16,11 @@
 </a>
 
 <img src="templates/aboutus.png" style="width:24.5%">
+<p>Click<a href = "/logout">here</a>to logout
+</p>
+{% for message in get_flashed_messages()%}
+{{message}}
+{% endfor %}
 
 
 <img src="templates/header4.png" alt="Header" width="1332">
