--- a/project/templates/pageone.html
+++ b/project/templates/pageone.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page1</title>
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 
 <body background-color="white"> <!-- change background colour -->
@@ -16,7 +17,7 @@
 </a>
 
 <img src="templates/aboutus.png" style="width:24.5%">
-<p>Click<a href = "/logout">here</a>to logout
+<p>Click<a href = "/logout"> here </a>to logout
 </p>
 {% for message in get_flashed_messages()%}
 {{message}}
