--- a/project/templates/stafflogin.html
+++ b/project/templates/stafflogin.html
@@ -5,22 +5,24 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
   </head>
   <body>
-    <div class="container">
-      <h1>Please login</h1>
-      <br>
-      <form action="" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{
-          request.form.username }}">
-         <input type="password" placeholder="Password" name="password" value="{{
-          request.form.password }}">
-        <input class="btn btn-default" type="submit" value="Login">
-      </form>
-      {% if error %}
-        <p class="error"><strong>Error:</strong> {{ error }}
-      {% endif %}
-      {% for message in get_flashed_messages()%}
-      {{message}}
-      {% endfor %}
-    </div>
+      <div class="login">
+          <h1>Login</h1>
+          <div >
+            <a href="{{ url_for('login') }}" class="active">Login</a>
+            <a href="#">Register</a>
+          </div>
+          <form action="{{ url_for('login') }}" method="post">
+            <label for="username">
+              
+            </label>
+            <input type="text" name="username" placeholder="Username" id="username" required>
+            <label for="password">
+              
+            </label>
+            <input type="password" name="password" placeholder="Password" id="password" required>
+            <div class="msg">{{ msg }}</div>
+            <input type="submit" value="Login">
+          </form>
+        </div>
   </body>
 </html>
