--- a/project/static/style.css
+++ b/project/static/style.css
@@ -37,8 +37,8 @@ body {
     color: #9da3ac;
 }
 .login .links a.active, .register .links a.active {
-    border-bottom: 3px solid #3274d6;
-    color: #3274d6;
+    border-bottom: 3px solid #15cfcf;
+    color: #15cfcf;
 }
 .login form, .register form {
     display: flex;
@@ -52,7 +52,7 @@ body {
     align-items: center;
     width: 50px;
     height: 50px;
-    background-color: #3274d6;
+    background-color: #15cfcf;
     color: #ffffff;
 }
 .login form input[type="password"], .login form input[type="text"], .login form input[type="email"], .register form input[type="password"], .register form input[type="text"], .register form input[type="email"] {
@@ -66,7 +66,7 @@ body {
     width: 100%;
     padding: 15px;
     margin-top: 20px;
-    background-color: #3274d6;
+    background-color: #15cfcf;
     border: 0;
     cursor: pointer;
     font-weight: bold;
@@ -74,7 +74,7 @@ body {
     transition: background-color 0.2s;
 }
 .login form input[type="submit"]:hover, .register form input[type="submit"]:hover {
-    background-color: #2868c7;
+    background-color: #15cfcf;
     transition: background-color 0.2s;
 }
 .navtop {
