--- a/project/static/style.css
+++ b/project/static/style.css
@@ -11,7 +11,7 @@ body {
 }
 .login, .register {
     width: 400px;
-    background-color: #ffffff;
+    background-color: #15cfcf;
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
     margin: 100px auto;
 }
